...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/sage_green" />

        <!-- Welcome Back Heading -->
        <TextView
            android:id="@+id/welcome_heading"
            style="@style/VibeHealth.Text.Heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:text="@string/welcome_back"
            app:layout_constraintEnd_toEndOf="parent"
...
                android:visibility="gone" />

        </FrameLayout>

        <!-- Sign Up Link -->
        <TextView
            android:id="@+id/sign_up_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:fontFamily="sans-serif"
            android:minHeight="@dimen/touch_target_min"
            android:paddingHorizontal="@dimen/spacing_medium"
...
