...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/sage_green" />

        <!-- Create Account Heading -->
        <TextView
            android:id="@+id/create_account_heading"
            style="@style/VibeHealth.Text.Heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/create_account"
            app:layout_constraintEnd_toEndOf="parent"
...
            app:layout_constraintEnd_toEndOf="@+id/create_account_button"
            app:layout_constraintStart_toStartOf="@+id/create_account_button"
            app:layout_constraintTop_toTopOf="@+id/create_account_button" />

        <!-- Sign In Link -->
        <TextView
            android:id="@+id/sign_in_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:fontFamily="sans-serif"
            android:minHeight="@dimen/touch_target_min"
            android:paddingHorizontal="@dimen/spacing_medium"
...
